--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         </div>
     </div>
 
-    <audio id="musicPlayer" loop muted>
+    <audio id="musicPlayer" loop>
         <source src="videoplayback.weba" type="audio/webm">
     </audio>
 
